# scrubkit

./: Cargo.toml  LICENSE  README.md  netlify.toml
.github/workflows/: release.yml
crates/scrubkit-cli/: Cargo.toml
crates/scrubkit-cli/src/: main.rs
crates/scrubkit-core/: Cargo.toml
crates/scrubkit-core/src/: jpeg.rs  lib.rs  png.rs
crates/scrubkit-web/: Cargo.toml  Dioxus.toml  index.html
crates/scrubkit-web/src/: main.rs
