[package]
name = "scrubkit"                                                          # or "scrubkit-core"
version = "0.1.1"
edition = "2024"
authors = ["Olsi Gjeci <olsi.developer@gamil.com>"]
description = "A modern, privacy-first metadata scrubber built with Rust."
license = "MIT"
repository = "https://github.com/seahorse-byte/scrubkit.git"
homepage = "https://github.com/seahorse-byte/scrubkit.git"
readme = "../../README.md"
keywords = ["exif", "metadata", "privacy", "scrubber", "cli"]
categories = ["command-line-utilities"]

[dependencies]
# Our core logic library
scrubkit-core = { path = "../scrubkit-core" }
# For building the command-line interface
clap = { version = "4.5.4", features = ["derive"] }
# For easy and robust error handling
anyhow = "1.0.82"
# For asynchronous file operations
tokio = { version = "1.37.0", features = ["fs", "macros", "rt-multi-thread"] }
