[package]
name = "scrubkit-core"
version = "0.1.2"
edition = "2024"
authors = ["Olsi Gjeci <olsigjeci@proton.me>"]
description = "A modern, privacy-first metadata scrubber built with Rust."
license = "MIT"
repository = "https://github.com/seahorse-byte/scrubkit.git"
homepage = "https://github.com/seahorse-byte/scrubkit.git"
readme = "../../README.md"
keywords = ["exif", "metadata", "privacy", "scrubber"]
categories = ["command-line-utilities"]

[dependencies]
thiserror = "1.0"
nom-exif = "2.5.4"
png = "0.17"       # for PNG support
